docs/book/samples/appa/unknown_name_check.out
error[name]: unknown name `mystery`
  --> unknown_name_check.kso:1:9
   1 | print "{mystery}"
               ^
